# SteamForge

./: .gitignore  README.md  build.ps1  index.html  package-lock.json  package.json  setup-tauri-steam-mods.ps1  vite.config.ts
src/: App.tsx  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
